# quarkus-aeron-pipeline

./: CONTRIBUTING.md  README.md
backend/backend/: pom.xml
backend/backend/src/main/java/sanjay/: GreetingResource.java
backend/backend/src/test/java/sanjay/: GreetingResourceIT.java  GreetingResourceTest.java
inference_bridge/: CMakeLists.txt
inference_bridge/include/: AeronPublisher.h  AeronSubscriber.h  MessageLayout.h  TritonBridge.h
inference_bridge/src/: AeronPublisher.cpp  AeronSubscriber.cpp  TritonBridge.cpp  main.cpp
